2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Use gtk_window_present for displaying dialogs.
	Fixes bug #113893, thanks Steve.

2003-05-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (preferences_callback): Fixed code to make 
	translation easier, fixes bug #113395.

2003-05-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (EXTRA_DIST): Fixups so make distcheck works.

2003-05-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Moved the icon into here from the gnome-desktop
	module.

2003-05-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_mine_draw): Added a dotted line to the
	background grid to increase contrast. Amusingly high-contrast was
	the worst case with the old line-style. See bug #97732. Thanks go
	to Feiyun Wang for suggesting the solution and to Jonathan
	Blandford who suggested using a stipple.
	(gtk_minefield_check_field): Applied the patch in bug #97524, a
	minor optimisation.

2003-05-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (fix_nmines): Added code to ensure that the number of
	mines is never greater than the number of cells. Fixes bug #97229.

	* Makefile.am (install-data-local): Update the names of any old
	high score files. High scores should work again.

	* gnomine.c: Added dodgy code to ensure that the window doesn't
	shrink when it looses focus and displays the "press here" message.
	Fixes bug #83317.

2003-04-30  Abel Cheung  <maddog@linux.org.hk>

	* ChangeLog: Convert to UTF-8.

2003-03-10  Ross Burton  <ross@burtonini.com>

	* flag.png, flag-question.png, mine.png: New icons from Jimmac.

	* flag-*.(gif|xpm): Removed, replaced by above.

	* minefield.c: Open the field PNGs instead of embedding XPMs.

	* Makefile.am: Install the new images.

2002-12-17  Ross Burton  <ross@burtonini.com>
